# WhatTheCipher

./: LICENSE  README.md  WTC.py  WTC_v0.1.py  pyproject.toml  style.css
Variants/: Readme.md  WTC_v0.0.py  WTC_v1.0 - Scans multiple host with multiple reports.py  style.css
examples/: demo.py
tests/: conftest.py  test_exporters.py  test_grading.py  test_parser.py  test_tls_classification.py
whatthecipher/: __init__.py  cli.py  grading.py  parser.py  recommendations.py  reporter.py  scanner.py  tls.py
whatthecipher/data/: cipher_suites.json
whatthecipher/exporters/: __init__.py  csv.py  html.py  json.py  markdown.py
whatthecipher/modules/: __init__.py  ct.py  fingerprint.py  integrations.py
whatthecipher/utils/: __init__.py  banner.py  colors.py  logger.py
