[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whatthecipher"
version = "2.0.0"
description = "Modern TLS/SSL assessment framework — protocols, ciphers, certificates, grading and reports."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Anmol K Sachan" }]
keywords = ["tls", "ssl", "security", "pentest", "ciphers", "scanner", "offensive-security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "rich>=13.0",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/anmolksachan/WhatTheCipher"
Repository = "https://github.com/anmolksachan/WhatTheCipher"
Issues = "https://github.com/anmolksachan/WhatTheCipher/issues"

[project.scripts]
wtc = "whatthecipher.cli:main"
whatthecipher = "whatthecipher.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["whatthecipher"]
artifacts = ["whatthecipher/data/*.json"]

[tool.ruff]
line-length = 90
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 90
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["whatthecipher"]
omit = ["*/modules/integrations.py"]
